# vsa-research

./: .gitignore  README.md
edge-node/: .env.example  main.py  pyproject.toml  requirements.txt
edge-node/src/: creating_video_stream.py  extract_keyframes.py  test_video_stream.py
ipynb/: analysis.ipynb  benchmark.ipynb  jit_test.ipynb  keyframes_test.ipynb  marking.ipynb  marking_img.ipynb  memory_test.ipynb  pca_test.ipynb  test_dbm2.ipynb  test_default.ipynb  test_dept.ipynb  test_distance_calculate.ipynb  test_onnx.ipynb  test_openvino.ipynb  test_reid.ipynb  test_seg.ipynb  test_solo_customer.ipynb  test_tensorrt.ipynb  test_track.ipynb  utils.py
model-builder/: main.py  requirements.txt
model-builder/configs/: yolov8l-train.yaml
model-builder/settings/: args.yaml  const.py
model-builder/src/: featuriser.py  preprocessing.py  yolov8detector.py
