[tool.poetry]
name = "edge-node"
version = "0.1.0"
description = ""
authors = ["Ivan Shevchenko <shevchenko.id@dns-shop.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.10.0.84"
numpy = "^2.0.0"
pyzmq = "^26.0.3"
scikit-image = "^0.24.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
